--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+backports.weakref==1.0rc1
+bleach==1.5.0
 certifi==2017.4.17
 chardet==3.0.4
 cycler==0.10.0
 gym==0.9.2
+html5lib==0.9999999
 idna==2.5
 Keras==2.0.4
+Markdown==2.2.0
 matplotlib==2.0.2
-numpy==1.12.1
+numpy==1.13.0
 protobuf==3.3.0
 pyglet==1.2.4
 pyparsing==2.2.0
@@ -16,7 +20,7 @@ requests==2.18.1
 scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
-tensorflow==1.1.0
+tensorflow==1.2.0
 Theano==0.9.0
 urllib3==1.21.1
 Werkzeug==0.12.2
