--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gym==0.9.2
 html5lib==0.9999999
 idna==2.5
 Keras==2.0.4
-Markdown==2.2.0
+Markdown==2.6.8
 matplotlib==2.0.2
 numpy==1.13.0
 protobuf==3.3.0
@@ -21,6 +21,7 @@ scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
 tensorflow==1.2.0
+tensorflow-gpu==1.2.1
 Theano==0.9.0
 urllib3==1.21.1
 Werkzeug==0.12.2
